j2ee 报告交了，我也懒得管了，先提交同步了再说

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
         <module>first-servlet</module>
         <module>servlet-form</module>
         <module>usermanager</module>
+        <module>usermanage-jdbc</module>
+        <module>hello-servlet</module>
     </modules>
 
     <dependencies>
